--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<ul>
 		  <li><a href="module-01/Scott_Mod1_3.html">Assignment 1.3</a></li>
 		  <li><a href="module-02/Scott_Mod2_2.html">Assignment 2.2</a></li>
-		  <li><a href="module-03/Scott_Mod3_3.html">Assignment 3.3</a></li>
+		  <li><a href="https://cms-bellevue.github.io/CSD_340/">Assignment 3.3</a></li>
 		</ul>
 		<h3>Projects</h3>
 		<ul>
