--- a/module-03/Scott_Mod3_3.html
+++ b/module-03/Scott_Mod3_3.html
@@ -7,42 +7,41 @@
     <meta name="author" content="Clint Scott">
     <meta name="robots" content="nofollow">
     <link href="Scott_Mod3_3.css" type="text/css" rel="stylesheet">
-    <title>CSD 340 Development with HTML and CSS</title>
+    <title>CSD 340 Web Development with HTML and CSS</title>
 </head>
 <body>
     <div id="container">
         <h1>Assignment 3.3: Build a Web Page Exercise - Part 3</h1>
 
-        <div class="flex-row">
+        <div class="columns-wrapper clearfix">
             <div class="left-column">
                 <h3>Top 10 Favorite Books</h3>
                 <ol>
-					<li>Dragons of Autumn Twilight – Margaret Weis & Tracy Hickman</li>
-					<li>Dragons of Winter Night – Margaret Weis & Tracy Hickman</li>
-					<li>Dragons of Spring Dawning – Margaret Weis & Tracy Hickman</li>
-					<li>A Spell for Chameleon – Piers Anthony</li>
-					<li>Watchmen – Alan Moore & Dave Gibbons</li>
-					<li>The Incredible Hulk: What Savage Beast – Peter David</li>
-					<li>Have a Nice Day: A Tale of Blood and Sweatsocks – Mick Foley</li>
-					<li>The Stone Cold Truth – Steve Austin</li>
-					<li>The New Encyclopedia of Modern Bodybuilding – Arnold Schwarzenegger</li>
-					<li>Zinn & the Art of Mountain Bike Maintenance – Lennard Zinn</li>
+                    <li>Dragons of Autumn Twilight – Margaret Weis & Tracy Hickman</li>
+                    <li>Dragons of Winter Night – Margaret Weis & Tracy Hickman</li>
+                    <li>Dragons of Spring Dawning – Margaret Weis & Tracy Hickman</li>
+                    <li>A Spell for Chameleon – Piers Anthony</li>
+                    <li>Watchmen – Alan Moore & Dave Gibbons</li>
+                    <li>The Incredible Hulk: What Savage Beast – Peter David</li>
+                    <li>Have a Nice Day: A Tale of Blood and Sweatsocks – Mick Foley</li>
+                    <li>The Stone Cold Truth – Steve Austin</li>
+                    <li>The New Encyclopedia of Modern Bodybuilding – Arnold Schwarzenegger</li>
+                    <li>Zinn & the Art of Mountain Bike Maintenance – Lennard Zinn</li>
                 </ol>
             </div>
 
             <div class="right-column">
                 <h3>5 Things I’ve Learned Since the Course Started</h3>
-				<ul>
-					<li>Utilizing semantic HTML is crucial for improving accessibility and structure, which enhances overall functionality and user experience.</li>
-					<li>Understanding the box model is crucial as it influences layout and spacing.</li>
-					<li>To achieve the best separation between structure and styling, use external CSS.</li>
-					<li>To maintain high code quality, tools like the <a href="https://validator.w3.org" target="_blank">W3C Validator</a> should be used to detect potential errors early.</li>
-					<li>Arrange files and use clear naming conventions for easier maintenance.</li>
-				</ul>
+                <ul>
+                    <li>Utilizing semantic HTML is crucial for improving accessibility and structure, which enhances overall functionality and user experience.</li>
+                    <li>Understanding the box model is crucial as it influences layout and spacing.</li>
+                    <li>To achieve the best separation between structure and styling, use external CSS.</li>
+                    <li>To maintain high code quality, tools like the <a href="https://validator.w3.org" target="_blank">W3C Validator</a> should be used to detect potential errors early.</li>
+                    <li>Arrange files and use clear naming conventions for easier maintenance.</li>
+                </ul>
             </div>
         </div>
-
-        <div class="bottom-link">
+		<div class="bottom-link-wrapper">
             <a href="../index.html">Return to Landing Page</a>
         </div>
     </div>
