--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		  <li><a href="module-02/Scott_Mod2_2.html">Assignment 2.2</a></li>
 		  <li><a href="module-03/Scott_Mod3_3.html">Assignment 3.3</a></li>
 		  <li><a href="module-04/Scott_Mod4_2.html">Assignment 4.2</a></li>
-
+		  <li><a href="module-06/Scott_Mod6_2.html">Assignment 6.2</a></li>
 		</ul>
 		<h3>Projects</h3>
 		<ul>
