--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 		  <li><a href="module-03/Scott_Mod3_3.html">Assignment 3.3</a></li>
 		  <li><a href="module-04/Scott_Mod4_2.html">Assignment 4.2</a></li>
 		  <li><a href="module-06/Scott_Mod6_2.html">Assignment 6.2</a></li>
+		  <li><a href="module-08/Scott_Mod8_2.html">Assignment 8.2</a></li>
 		</ul>
 		<h3>Projects</h3>
 		<ul>
-		  <li><a href="biosite/index.html">bioSite Project Home Page</a></li>
+		  <li><a href="https://cms-bellevue.github.io/bioSite/">bioSite Project Home Page</a></li>
 		</ul>
 		<h4>Important Links</h4>
 		<ul>
