--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</ul>
 		<h3>Projects</h3>
 		<ul>
-		  <li><a href="https://cms-bellevue.github.io/bioSite/">bioSite Project Home Page</a></li>
+		  <li><a href="https://cms-bellevue.github.io/bioSite/" target="_blank" rel="noopener noreferrer">bioSite Project Home Page</a></li>
 		</ul>
 		<h4>Important Links</h4>
 		<ul>
