--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		  <li><a href="module-04/Scott_Mod4_2.html">Assignment 4.2</a></li>
 		  <li><a href="module-06/Scott_Mod6_2.html">Assignment 6.2</a></li>
 		  <li><a href="module-08/Scott_Mod8_2.html">Assignment 8.2</a></li>
+		  <li><a href="module-09/Scott_Mod9_3.html">Assignment 9.3</a></li>
 		</ul>
 		<h3>Projects</h3>
 		<ul>
