--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		  <li><a href="module-06/Scott_Mod6_2.html">Assignment 6.2</a></li>
 		  <li><a href="module-08/Scott_Mod8_2.html">Assignment 8.2</a></li>
 		  <li><a href="module-09/Scott_Mod9_3.html">Assignment 9.3</a></li>
+		  <li><a href="module-10/Scott_Mod10_3.html">Assignment 10.3</a></li>
 		</ul>
 		<h3>Projects</h3>
 		<ul>
