--- a/module-10/Scott_Mod10_3.html
+++ b/module-10/Scott_Mod10_3.html
@@ -11,9 +11,11 @@
   <title>CSD 340 Web Development with HTML and CSS</title>
 </head>
 <body>
-  <div class="centered">
-    <h1>Assignment 10.3: JavaScript - Part 2</h1>
-    <p>Click an image to see the transformation!</p>
+  <header>
+  <h1>Assignment 10.3: JavaScript - Part 2</h1>
+  </header>
+  <div class="container">    
+    <p>Click an image to see the transformation!</p>	
     <div class="image-container">
       <div class="left-image">
         <img src="images/banner.jpg" alt="Bruce Banner" class="thumbnail"
@@ -27,7 +29,12 @@
              data-alt="images/devastator.jpg"
              onclick="transform(this)" title="Click to transform into vehicle">
       </div>
+	  <p>Click an image a second time to go back to the original.</p>
     </div>
   </div>
+  <footer>
+    <p>&copy; 2025 Scott</p>
+    <p><a href="../index.html">Back to Landing Page</a></p>
+  </footer>  
 </body>
 </html>
