--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		  <li><a href="module-08/Scott_Mod8_2.html">Assignment 8.2</a></li>
 		  <li><a href="module-09/Scott_Mod9_3.html">Assignment 9.3</a></li>
 		  <li><a href="module-10/Scott_Mod10_3.html">Assignment 10.3</a></li>
+		  <li><a href="module-11/Scott_Mod11_3.html">Assignment 11.3</a></li>
 		</ul>
 		<h3>Projects</h3>
 		<ul>
