--- a/module-12/Scott_Mod12_2.html
+++ b/module-12/Scott_Mod12_2.html
@@ -21,6 +21,7 @@
                 <hr>
                 <ul id="bookList">
                 </ul>
+				<!-- Moved top/bottom bottom/top buttons under booklist on purpose. Looks better! -->
                 <button id="topToBottomBtn">Top to Bottom</button>
                 <button id="bottomToTopBtn">Bottom to Top</button>
             </div>
